--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,41 @@
-.App {
-  text-align: center;
+
+
+.navbar-top {
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: #282c34; */
+  color: white;
+  z-index: 100;
+  height: 10vh;
 }
 
+.bground {
+  display: block;
+  position: absolute;
+  background-color: #def;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
+.main-screen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: auto;
+  margin: 0.5%;
+  height: 89vh;
+  background-color: aliceblue;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  max-height: 2000px;
+}
+
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +69,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
