--- a/public/override.css
+++ b/public/override.css
@@ -1,11 +1,11 @@
 :root {
-    --bs-primary: rgb(0, 20, 130) !important;
-    --bs-primary-rgb: 0, 20, 130 !important;
-    --bs-nav-link-color: white;
+    --bs-primary: rgb(0, 0, 20) !important;
+    --bs-primary-rgb: 0, 0, 20 !important;
+    /* --bs-nav-link-color: white;
     --bs-navbar-color: white;
     --bs-navbar-brand-color: white;
     --bs-emphasis-color-rgb: 255, 255, 255;
-  }
+  } */
   
   .bg-primary {
     background-color: var(--bs-primary) !important;
