--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,17 @@
-
-
 .navbar-top {
   position: fixed;
   top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-color: #282c34; */
-  color: white;
-  z-index: 100;
-  height: 10vh;
+  height: 8vh;
+  width: 100%;
 }
 
 .bground {
   display: block;
   position: absolute;
-  background-color: #def;
+  background-color: #000;
   top: 0;
   height: 100vh;
   width: 100vw;
@@ -29,10 +25,10 @@
   height: auto;
   margin: 0.5%;
   height: 89vh;
-  background-color: aliceblue;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+  background-color: #010101;
+  box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.1);
   border-radius: 15px;
-  max-height: 2000px;
+  max-height: 1000px;
 }
 
 /*
