--- a/src/components/TextReader.css
+++ b/src/components/TextReader.css
@@ -11,3 +11,23 @@
     color: #ddd;
     margin: 5%;
 }
+
+.start-button {
+    position: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(15px);
+    border: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 101;
+}
+
+.big {
+    transform: scale(5);
+}
